--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-pc-windows-gnu
+          - target: x86_64-pc-windows-msvc
             name: calcagebra.exe
             os: windows-latest
           - target: x86_64-unknown-linux-musl
@@ -44,8 +44,8 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --target ${{ matrix.target }}
-      - run: cp target/${{ matrix.target }}/release/$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].targets[] | select( .kind | map(. == "bin") | any ) | .name') $(echo ${{ matrix.name }})
+          args: --release --target ${{ matrix.target }} --target-dir output/
+      - run: mkdir -p target/${{ matrix.target }}/debug && cp target/{,${{ matrix.target }}/}debug/calcagebra 2>/dev/null; cp target/${{ matrix.target }}/release/$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].targets[] | select( .kind | map(. == "bin") | any ) | .name') $(echo ${{ matrix.name }})
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
