--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
           args: --release --target ${{ matrix.target }} --target-dir output/
       - run: |
           PROJ=$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[].targets[] | select( .kind | map(. == "bin") | any ) | .name')
-          FILEPATH=target/${{ matrix.target }}/release/$PROJ | .name')
+          FILEPATH=target/${{ matrix.target }}/release/$PROJ
           if [[ -f $FILEPATH ]]; then
             cp $FILEPATH $(echo ${{ matrix.name }})
           else
