--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "calcagebra"
-version = "1.8.2"
+version = "1.9.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = { version = "3.1.18", features = ["derive"] }
+plotters = "0.3.6"
+rand = "0.8.5"
 rustyline = "14.0.0"
-textplots = "0.8.6"
 
 [profile.release]
 strip = true
