--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "calcagebra"
-version = "1.9.2"
+version = "1.10.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,7 +9,8 @@ edition = "2021"
 clap = { version = "3.1.18", features = ["derive"] }
 plotters = "0.3.6"
 rand = "0.8.5"
-rustyline = "14.0.0"
+rustyline = { version = "14.0.0", features = ["derive"] }
+syntect = "5.2.0"
 
 [profile.release]
 strip = true
