--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "calcagebra"
-version = "1.10.0"
+version = "1.11.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,6 +11,7 @@ plotters = "0.3.6"
 rand = "0.8.5"
 rustyline = { version = "14.0.0", features = ["derive"] }
 syntect = "5.2.0"
+viuer = "0.7.1"
 
 [profile.release]
 strip = true
