--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ rand = "0.8.5"
 rustyline = { version = "14.0.0", features = ["derive"] }
 syntect = "5.2.0"
 viuer = "0.7.1"
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }
+thiserror = "1.0.62"
 
 [profile.release]
 strip = true
