--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,17 @@ name = "calcagebra"
 version = "1.11.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 clap = { version = "4.0.9", features = ["derive"] }
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }
 thiserror = "1.0.62"
 
 [profile.release]
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = 'abort'
 strip = true
-opt-level = "z"
 
 [profile.dev]
 opt-level = 3
