--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "calcagebra"
-version = "2.0.0-rc3"
+version = "2.0.0"
 edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.9", features = ["derive"] }
 cranelift = { version = "0.114.0", features = ["module", "jit", "native"] }
+plotters = "0.3.7"
+rand = "0.8.5"
 rustyline = { version = "14.0.0", features = ["derive"] }
 syntect = "5.2.0"
+viuer = { version = "0.9.1", features = ["print-file"] }
 
 [profile.release]
 opt-level = 'z'
@@ -17,5 +20,4 @@ panic = 'abort'
 strip = true
 
 [profile.dev]
-opt-level = 3
 debug = true
