--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,23 @@
 [package]
 name = "calcagebra"
-version = "1.11.0"
+version = "2.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-clap = { version = "3.1.18", features = ["derive"] }
-plotters = "0.3.6"
+clap = { version = "4.0.9", features = ["derive"] }
+cranelift = { version = "0.114.0", features = ["module", "jit", "native"] }
+plotters = "0.3.7"
 rand = "0.8.5"
 rustyline = { version = "14.0.0", features = ["derive"] }
 syntect = "5.2.0"
-viuer = "0.7.1"
+viuer = { version = "0.9.1", features = ["print-file"] }
 
 [profile.release]
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = 'abort'
 strip = true
-opt-level = "z"
 
 [profile.dev]
-opt-level = 3
 debug = true
