feat: start work

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,9 @@
 {
 	"name": "Codespaces Rust Starter",
 	"extensions": [
-		"rust-lang.rust-analyzer"
+		"rust-lang.rust-analyzer",
+		"kuba-p.theme-pink-candy",
+		"pkief.material-icon-theme"
 	],
 	"dockerFile": "Dockerfile",
 	"settings": {
