feat: switch to interpreter (#7)
* feat: switch to interpreter

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,11 @@
 {
 	"name": "Codespaces Rust Starter",
 	"extensions": [
-		"rust-lang.rust-analyzer"
+		"rust-lang.rust-analyzer",
+		"kuba-p.theme-pink-candy",
+		"pkief.material-icon-theme",
+		"megatank58.calcagebra",
+		"esbenp.prettier-vscode"
 	],
 	"dockerFile": "Dockerfile",
 	"settings": {
