--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,8 +45,10 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
                 sudo apt install libfontconfig1-dev
-          else [ "$RUNNER_OS" == "macOS" ];
+          elif [ "$RUNNER_OS" == "macOS" ]; then
                 brew install fontconfig
+          else 
+            echo "Windows"
           fi
       - uses: actions-rs/cargo@v1
         with:
