feat: switch to rust_decimal and implement sinh, cosh, atan, atan2 methods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin.rs"
 clap = { version = "4.0.9", features = ["derive"] }
 codespan-reporting = "0.11.1"
 plotters = "0.3.7"
+rust_decimal = { version = "1.37.2", features = ["maths", "macros"] }
 rustyline = { version = "14.0.0", features = ["derive"] }
 syntect = "5.2.0"
 
